added init and dispose to cubemap, replaced resource folder in bin with smylink

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /OpenglTestConsole/OpenglTestConsole/bin/Release
 /OpenglTestConsole/OpenglTestConsole/obj
 /OpenglTestConsole/ResourcesClassGenerator/bin/Release
+/Obsidian/API
+/OpenglTestConsole/OpenglTestConsole/bin/Debug/net8.0/Resources
