--- a/OpenglTestConsole/OpenglTestConsole/OpenglTestConsole.csproj
+++ b/OpenglTestConsole/OpenglTestConsole/OpenglTestConsole.csproj
@@ -15,9 +15,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="Resources\**\*">
+		<!--<None Update="Resources\**\*">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
+		</None>-->
 
 		<None Update="Screenshots">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
