--- a/OpenglTestConsole/OpenglTestConsole/OpenglTestConsole.csproj
+++ b/OpenglTestConsole/OpenglTestConsole/OpenglTestConsole.csproj
@@ -12,9 +12,9 @@
 	<ItemGroup>
 		<PackageReference Include="ICSharpCode.Decompiler" Version="9.1.0.7988" />
 		<PackageReference Include="ImGui.NET" Version="1.91.6.1" />
+		<PackageReference Include="Magick.NET-Q8-AnyCPU" Version="14.6.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="OpenTK" Version="4.9.4" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
 	</ItemGroup>
 
 	<ItemGroup>
