Update Magick.NET, ignore bin/obj, update textures and fixup the WBOIT
Upgraded Magick.NET-Q8-AnyCPU to version 14.8.0 in OpenglTestConsole.csproj. Updated .gitignore to exclude OpenglTestConsole/bin and RGL/obj directories. Added a new texture file and updated an existing one in Resources/Textures. Removed build output and intermediate files from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /OpenglTestConsole/ResourcesClassGenerator/bin/Release
 /Obsidian/API
 *.dmp
+/OpenglTestConsole/OpenglTestConsole/bin
+/OpenglTestConsole/RGL/obj
